# ama

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/actions/: add.rs  answer.rs  ask.rs  create.rs  eval.rs  mod.rs
src/cli/: command.rs
src/configuration/: config.rs
src/database/: quiz.rs
src/state/: quiz.rs
src/utils/: file_system.rs
