[package]
name = "ama"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
rusqlite = { version = "0.36.0", features = ["bundled", "chrono"] }
once_cell = "1.21.4"
chrono = "0.4.45"
